bug for smartphone fixed(overflow hidden topboiler)

--- a/public/index.css
+++ b/public/index.css
@@ -28,6 +28,7 @@ h5 {
   box-shadow: darkslategrey 3px 3px;
   position: relative;
   z-index: 0;
+  overflow: hidden;
 }
 
 .sky {
@@ -497,6 +498,7 @@ h5 {
 @media (max-width: 780px) {
   .top-boiler {
     width: 100vw;
+    height: 60vh;
     border: none;
     border-radius: 0;
   }
@@ -504,6 +506,42 @@ h5 {
   .top-boiler .sky,
   .top-boiler .land {
     border-radius: 0;
+  }
+
+  .pullup-bar {
+    width: 100px;
+    height: 150px;
+    position: relative;
+  }
+
+  .pullup-bar .bars {
+    width: 7px;
+  }
+
+  .pullup-bar .bar-top {
+    transform: translateX(-40px) rotate(-90deg);
+  }
+
+  .pullup-bar h5 {
+    position: absolute;
+    /* font-size: 3.25rem; */
+    transform: translate(-10px, -25px);
+    z-index: 20;
+  }
+  .pullup-bar h5.hovering {
+    animation: word_updown 2s infinite;
+  }
+
+  @keyframes word_updown {
+    0% {
+      transform: translate(-10px, -25px);
+    }
+    50% {
+      transform: translate(-10px, -70px);
+    }
+    100% {
+      transform: translate(-10px, -25px);
+    }
   }
 
   #section1 {
